estilizando a lista de tarefa

--- a/listaDeTarefas/src/components/forms/Button.module.css
+++ b/listaDeTarefas/src/components/forms/Button.module.css
@@ -1,5 +1,5 @@
 button{
-    background-color: #1646A0;
+    background-color: #7f6bc9;
     color: #FFF;
     padding: 0 45px;
     border: 2px solid #FFF;
@@ -13,5 +13,5 @@ button{
 }
 
 button:hover{
-    background-color: #16A026;
+    background-color: #d79afa;
 }
