--- a/listaDeTarefas/src/components/forms/Input.module.css
+++ b/listaDeTarefas/src/components/forms/Input.module.css
@@ -8,7 +8,7 @@
     padding: .7em;
     border-radius: 0;
     border: none;
-    color: #000154;
+    color: #b56ef7;
     font-weight: bold;
 }
 
@@ -18,5 +18,5 @@
 }
 
 .form_control input::placeholder{
-    color: #7B7B7B;
+    color: #7e7d80;
 }
