--- a/listaDeTarefas/src/components/layout/NavBar.module.css
+++ b/listaDeTarefas/src/components/layout/NavBar.module.css
@@ -2,7 +2,7 @@
 .navBar{
     display: flex;
     justify-content: space-between;
-    background-color: #000154;
+    background-color: #9a9bda;
     padding: 1em; 
 }
 
