--- a/listaDeTarefas/src/components/pages/Home.Module.css
+++ b/listaDeTarefas/src/components/pages/Home.Module.css
@@ -1,5 +1,5 @@
 .home_container{
-
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,13 +13,13 @@
     margin-bottom: .5em;
 }
 .home_container h1 span{
-    color: #5254f2;
-    padding: 0 2.5em;
-    background-color: #222;
+    color: #9b67d6;
+    padding: 0 .2em;
+    /* background-color: #1f0542; */
 }
 .home_container p{
     margin-bottom: 1.5em;
-    color: #7b7b7b;
+    color: #3b0b72;
 }
 .home_container img{
     width: 800;
