--- a/listaDeTarefas/src/components/pages/ListTarefa.Module.css
+++ b/listaDeTarefas/src/components/pages/ListTarefa.Module.css
@@ -1,5 +1,5 @@
-List_tarefa_container{
-    width: 100;
+.List_tarefa_container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
